<resources>
    <string name="app_name">Plug In Pool</string>
    <string name="historique_des_rencontres">Historique</string>
    <string name="cr_er_un_joueur">Joueurs</string>
    <string name="nouvelle_rencontre">Rencontre</string>
    <string name="lancer_la_rencontre">Lancer la rencontre</string>
    <string name="nomJoueur">Nom</string>
    <string name="prenomJoueur">Prénom</string>
    <string name="listeJoueurs"><u>Liste des joueurs :</u></string>
    <string name="historiqueRencontres"><u>Historique des rencontres :</u></string>
    <string name="rejouer">Rejouer</string>
    <string name="enregistrerLaRencontre">Enregistrer la rencontre</string>
    <string name="resumeDeLaRencontre"><u>Résumé de la rencontre :</u></string>
    <string name="statistiquesDeLaRencontre"><u>Statistiques de la rencontre :</u></string>
    <string name="joueurSuivant">Joueur suivant</string>
    <string name="quitterRencontre">Quitter</string>
    <string name="faute">Faute</string>
    <string name="Joueurs"><u>Joueurs :</u></string>
    <string name="Scores"><u>Scores :</u></string>
    <string name="parametres"><u>Paramètres :</u></string>
    <string name="nombre_de_manches"><u>Nombre de manches :</u></string>
    <string name="valeurDefautNbRencontre">1</string>
    <string name="joueur1">joueur1</string>
    <string name="joueur2">joueur2</string>
    <string name="gagnant">Gagnant :</string>
    <string name="dur_e_de_la_rencontre">Durée de la rencontre :</string>
    <string name="_0_manches">0 manches</string>
    <string name="joueurgagnant">joueurGagnant</string>
    <string name="_00m00s">00m00s</string>
    <string name="_0">0</string>
    <string name="nombre_de_fautes">Nombre de fautes :\ </string>
    <string name="_0pourcent">0%</string>
    <string name="pr_cision_d_empochage">Précision d\'empochage :\ </string>
    <string name="joueurs"><u>Joueurs</u></string>
    <string name="pr_cision_d_empochageHistorique"><u>Précision d\'empochage</u></string>
    <string name="purger_l_historique">Purger l\'historique</string>
    <string name="tables_disponibles"><u>Tables disponibles :</u></string>
</resources>