<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pageFinDeRencontre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_fond_ecran"
    tools:context=".IHMFinDeRencontre">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBasDePage"
        android:layout_width="0dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/boutonEnregistrerRencontre"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/enregistrerLaRencontre"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/boutonRejouer"
            app:layout_constraintVertical_bias="0.502" />

        <Button
            android:id="@+id/boutonRejouer"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/rejouer"
            app:layout_constraintTop_toBottomOf="@id/boutonEnregistrerRencontre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.502" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHautDePage"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textPlugInPool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="96dp"
            android:text="Plug In Pool"
            android:textSize="96sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCorpsDePage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBasDePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHautDePage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFinDeRencontre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bords_arrondis"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textResumeRencontre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/resumeDeLaRencontre"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutResumeRencontre"
                android:layout_width="605dp"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bords_arrondis"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textStatistiquesRencontre"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textResumeRencontre" />

            <TextView
                android:id="@+id/textStatistiquesRencontre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/statistiquesDeLaRencontre"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/layoutResumeRencontre"
                app:layout_constraintBottom_toTopOf="@id/layoutStatistiquesDeLaRencontre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="216dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutStatistiquesDeLaRencontre"
                android:layout_width="605dp"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bords_arrondis"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textStatistiquesRencontre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>